--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "jstransformer-babel": "^2.1.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "pg-promise": "^5.4.3",
